Remove status from database
